--- a/index.html
+++ b/index.html
@@ -55,22 +55,22 @@
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
-                <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">Çağatay N. Gürsoy</a>
+                <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">Çağatay N. Gürsoy</a>,
               </span>
                 <span class="author-block">
-                  <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Juliane Nage</a>
+                  <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Juliane Nagel</a>,
                 </span>
                 <span class="author-block">
-                  <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Simon Kern</a>
+                  <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Simon Kern</a>,
                 </span>
                 <span class="author-block">
-                  <a href="4th AUTHOR PERSONAL LINK" target="_blank">Martin F. Gerchen</a>
+                  <a href="4th AUTHOR PERSONAL LINK" target="_blank">Martin F. Gerchen</a> ,
                 </span>
                 <span class="author-block">
-                  <a href="5th AUTHOR PERSONAL LINK" target="_blank">Peter Kirsch</a>
+                  <a href="5th AUTHOR PERSONAL LINK" target="_blank">Peter Kirsch</a> ,
                 </span>
                   <span class="author-block">
-                    <a href="LAST AUTHOR PERSONAL LINK" target="_blank">Gordon B. Feld</a>
+                    <a href="LAST AUTHOR PERSONAL LINK" target="_blank">Gordon B. Feld</a> ,
                   </span>
                   </div>
 
@@ -140,7 +140,15 @@
         <h2 class="title is-3">Abstract</h2>
         <div class="content has-text-justified">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ullamcorper tellus sed ante aliquam tempus. Etiam porttitor urna feugiat nibh elementum, et tempor dolor mattis. Donec accumsan enim augue, a vulputate nisi sodales sit amet. Proin bibendum ex eget mauris cursus euismod nec et nibh. Maecenas ac gravida ante, nec cursus dui. Vivamus purus nibh, placerat ac purus eget, sagittis vestibulum metus. Sed vestibulum bibendum lectus gravida commodo. Pellentesque auctor leo vitae sagittis suscipit.
+            <pre>
+              Alcohol Use Disorder (AUD) is one of the most prevalent substance use disorders and globally millions of persons are affected by it. In AUD, sensitization of the dopaminergic reward networks in the brain by plastic processes is thought to enhance “wanting” of alcohol, whereas “liking” of alcohol may stay the same or even decrease. Particularly as drug use transforms into abuse, persons with substance use disorders experience an enhanced craving response towards drug related cues, i.e., cue reactivity. 
+
+              In the cue reactivity task, enhanced activation of dopaminergic reward areas in the brain of people suffering AUD has been shown by recording fMRI while they viewed neutral pictures or pictures of alcoholic beverages. Processing of olfactory information can strongly cue the reinstatement of memories. Therefore, we aim to better access the learned association of alcohol cues with behaviour of addiction by utilising the olfactory cues in the cue reactivity task. Combining the image and odour based cue reactivity task offers the present research tests the effectivity of olfactory cues compared with the tried and tested image-only cue reactivity task to elicit the learned reaction.
+
+              Our goal is to ultimately enhance the measurement precision of the previously existing image-based task. In this validation experiment, we recruit participants who have hazardous or harmful alcohol consumption behaviour, confirmed by the Alcohol Use Disorders Identification Test. In the combined cue reactivity task, olfactory and synchronous visual alcohol and non-alcohol cues are delivered to participants lying in the MRI using an olfactometer and an MRI compatible screen. We contrast this with a version of the task only showing the visual stimuli. We predict that the combined stimulation will elicit stronger cue reactivity than the visual stimulation alone. We will present data from an initial experiment (n = 20), where the alcohol and non-alcohol cues could not elicit a differential reaction. In addition, we will present preliminary results of a second attempt with adapted non-alcohol cues.
+
+              This validation study will enable a larger study where a targeted memory extinction during sleep will be attempted utilising olfactory drug cues.
+          </pre>
           </p>
         </div>
       </div>
