--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
-                <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">Çağatay N. Gürsoy</a>,
+                <a href="FIRST AUTHOR PERSONAL LINK" target="_blank"><b>Çağatay N. Gürsoy</b></a>,
               </span>
                 <span class="author-block">
                   <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Juliane Nagel</a>,
@@ -70,7 +70,7 @@
                   <a href="5th AUTHOR PERSONAL LINK" target="_blank">Peter Kirsch</a> ,
                 </span>
                   <span class="author-block">
-                    <a href="LAST AUTHOR PERSONAL LINK" target="_blank">Gordon B. Feld</a> ,
+                    <a href="LAST AUTHOR PERSONAL LINK" target="_blank">Gordon B. Feld</a>
                   </span>
                   </div>
 
@@ -174,8 +174,65 @@
 </section>
 <!-- End image carousel -->
 
-
-
+<!-- Stats tables -->
+<style type="text/css">
+.tg  {border-collapse:collapse;border-spacing:0;}
+.tg td{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
+  overflow:hidden;padding:10px 5px;word-break:normal;}
+.tg th{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
+  font-weight:normal;overflow:hidden;padding:10px 5px;word-break:normal;}
+.tg .tg-0lax{text-align:left;vertical-align:top}
+</style>
+<table class="tg">
+<thead>
+  <tr>
+    <th class="tg-0lax">Source</th>
+    <th class="tg-0lax">SS</th>
+    <th class="tg-0lax">dof1</th>
+    <th class="tg-0lax">dof2</th>
+    <th class="tg-0lax">MS</th>
+    <th class="tg-0lax">F</th>
+    <th class="tg-0lax">p-unc</th>
+    <th class="tg-0lax">p-GG-corr</th>
+    <th class="tg-0lax">ηp2</th>
+  </tr>
+</thead>
+<tbody>
+  <tr>
+    <td class="tg-0lax">stim_types</td>
+    <td class="tg-0lax">16.309</td>
+    <td class="tg-0lax">1</td>
+    <td class="tg-0lax">19</td>
+    <td class="tg-0lax">16.309</td>
+    <td class="tg-0lax">17.352</td>
+    <td class="tg-0lax">0.001</td>
+    <td class="tg-0lax">0.001</td>
+    <td class="tg-0lax">0.477</td>
+  </tr>
+  <tr>
+    <td class="tg-0lax">task_types</td>
+    <td class="tg-0lax">2.097</td>
+    <td class="tg-0lax">1</td>
+    <td class="tg-0lax">19</td>
+    <td class="tg-0lax">2.097</td>
+    <td class="tg-0lax">10.545</td>
+    <td class="tg-0lax">0.004</td>
+    <td class="tg-0lax">0.004</td>
+    <td class="tg-0lax">0.357</td>
+  </tr>
+  <tr>
+    <td class="tg-0lax">stim_types * task_types</td>
+    <td class="tg-0lax">0.138</td>
+    <td class="tg-0lax">1</td>
+    <td class="tg-0lax">19</td>
+    <td class="tg-0lax">0.138</td>
+    <td class="tg-0lax">0.928</td>
+    <td class="tg-0lax">0.347</td>
+    <td class="tg-0lax">0.347</td>
+    <td class="tg-0lax">0.047</td>
+  </tr>
+</tbody>
+</table>
 
 
 
