--- a/index.html
+++ b/index.html
@@ -176,64 +176,66 @@
 
 <!-- Stats tables -->
 <style type="text/css">
-.tg  {border-collapse:collapse;border-spacing:0;}
+.tg  {border-collapse:collapse;border-spacing:0;margin:0px auto;}
 .tg td{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
   overflow:hidden;padding:10px 5px;word-break:normal;}
 .tg th{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
   font-weight:normal;overflow:hidden;padding:10px 5px;word-break:normal;}
-.tg .tg-0lax{text-align:left;vertical-align:top}
+.tg .tg-arf0{background-color:#efefef;font-family:inherit;text-align:left;vertical-align:top}
+.tg .tg-7uu0{background-color:#c0c0c0;font-family:inherit;text-align:left;vertical-align:top}
+.tg .tg-v86e{background-color:#c0c0c0;font-family:inherit;text-align:center;vertical-align:top}
+.tg .tg-tqma{background-color:#efefef;font-family:inherit;text-align:center;vertical-align:top}
 </style>
 <table class="tg">
 <thead>
   <tr>
-    <th class="tg-0lax">Source</th>
-    <th class="tg-0lax">SS</th>
-    <th class="tg-0lax">dof1</th>
-    <th class="tg-0lax">dof2</th>
-    <th class="tg-0lax">MS</th>
-    <th class="tg-0lax">F</th>
-    <th class="tg-0lax">p-unc</th>
-    <th class="tg-0lax">p-GG-corr</th>
-    <th class="tg-0lax">ηp2</th>
+    <th class="tg-7uu0">Source</th>
+    <th class="tg-v86e">SS</th>
+    <th class="tg-v86e">dof1</th>
+    <th class="tg-v86e">dof2</th>
+    <th class="tg-v86e">MS</th>
+    <th class="tg-v86e">F</th>
+    <th class="tg-v86e">p-unc</th>
+    <th class="tg-v86e">p-GG-corr</th>
+    <th class="tg-v86e">ηp2</th>
   </tr>
 </thead>
 <tbody>
   <tr>
-    <td class="tg-0lax">stim_types</td>
-    <td class="tg-0lax">16.309</td>
-    <td class="tg-0lax">1</td>
-    <td class="tg-0lax">19</td>
-    <td class="tg-0lax">16.309</td>
-    <td class="tg-0lax">17.352</td>
-    <td class="tg-0lax">0.001</td>
-    <td class="tg-0lax">0.001</td>
-    <td class="tg-0lax">0.477</td>
+    <td class="tg-arf0">stim_types</td>
+    <td class="tg-tqma">16.309</td>
+    <td class="tg-tqma">1</td>
+    <td class="tg-tqma">19</td>
+    <td class="tg-tqma">16.309</td>
+    <td class="tg-tqma">17.352</td>
+    <td class="tg-tqma">0.001</td>
+    <td class="tg-tqma">0.001</td>
+    <td class="tg-tqma">0.477</td>
   </tr>
   <tr>
-    <td class="tg-0lax">task_types</td>
-    <td class="tg-0lax">2.097</td>
-    <td class="tg-0lax">1</td>
-    <td class="tg-0lax">19</td>
-    <td class="tg-0lax">2.097</td>
-    <td class="tg-0lax">10.545</td>
-    <td class="tg-0lax">0.004</td>
-    <td class="tg-0lax">0.004</td>
-    <td class="tg-0lax">0.357</td>
+    <td class="tg-arf0">task_types</td>
+    <td class="tg-tqma">2.097</td>
+    <td class="tg-tqma">1</td>
+    <td class="tg-tqma">19</td>
+    <td class="tg-tqma">2.097</td>
+    <td class="tg-tqma">10.545</td>
+    <td class="tg-tqma">0.004</td>
+    <td class="tg-tqma">0.004</td>
+    <td class="tg-tqma">0.357</td>
   </tr>
   <tr>
-    <td class="tg-0lax">stim_types * task_types</td>
-    <td class="tg-0lax">0.138</td>
-    <td class="tg-0lax">1</td>
-    <td class="tg-0lax">19</td>
-    <td class="tg-0lax">0.138</td>
-    <td class="tg-0lax">0.928</td>
-    <td class="tg-0lax">0.347</td>
-    <td class="tg-0lax">0.347</td>
-    <td class="tg-0lax">0.047</td>
+    <td class="tg-arf0">stim_types * task_types</td>
+    <td class="tg-tqma">0.138</td>
+    <td class="tg-tqma">1</td>
+    <td class="tg-tqma">19</td>
+    <td class="tg-tqma">0.138</td>
+    <td class="tg-tqma">0.928</td>
+    <td class="tg-tqma">0.347</td>
+    <td class="tg-tqma">0.347</td>
+    <td class="tg-tqma">0.047</td>
   </tr>
 </tbody>
 </table>
-
 
 
 <!-- Paper poster -->
