--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 
   <title>Targeted Extinction of Drug Cues During Sleep - LearnMem2023</title>
-  <link rel="icon" type="image/x-icon" href="static/images/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="static/images/favicon.png">
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
   rel="stylesheet">
 
@@ -64,10 +64,10 @@
                   <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Simon Kern</a>,
                 </span>
                 <span class="author-block">
-                  <a href="4th AUTHOR PERSONAL LINK" target="_blank">Martin F. Gerchen</a> ,
+                  <a href="4th AUTHOR PERSONAL LINK" target="_blank">Martin F. Gerchen</a>,
                 </span>
                 <span class="author-block">
-                  <a href="5th AUTHOR PERSONAL LINK" target="_blank">Peter Kirsch</a> ,
+                  <a href="5th AUTHOR PERSONAL LINK" target="_blank">Peter Kirsch</a>,
                 </span>
                   <span class="author-block">
                     <a href="LAST AUTHOR PERSONAL LINK" target="_blank">Gordon B. Feld</a>
@@ -511,6 +511,386 @@
     </div>
   </div>
 </section>
+
+
+<!-- Stats tables for iter 2 -->
+<section class="section hero is-light">
+  <div class="container is-max-desktop">
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-four-fifths">
+        <h1 class="title is-2">Iteration 2 <br><br>Detailed Tables and Plots</h1>
+        <h2 class="title is-3"><br>Wanting question boxplot</h2>
+        <img src="static/images/iter2/fig_wanting.png" alt="Wanting question boxplot"/>
+        <h3 class="title is-4"><br>ANOVA table for Wanting Questions</h3>
+        <div class="content has-text-justified">
+          <p>
+
+            <style type="text/css">
+            .tg  {border-collapse:collapse;border-spacing:0;margin:0px auto;}
+            .tg td{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
+              overflow:hidden;padding:10px 5px;word-break:normal;}
+            .tg th{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
+              font-weight:normal;overflow:hidden;padding:10px 5px;word-break:normal;}
+            .tg .tg-arf0{background-color:#efefef;font-family:inherit;text-align:left;vertical-align:top}
+            .tg .tg-7uu0{background-color:#c0c0c0;font-family:inherit;text-align:left;vertical-align:top}
+            .tg .tg-v86e{background-color:#c0c0c0;font-family:inherit;text-align:center;vertical-align:top}
+            .tg .tg-tqma{background-color:#efefef;font-family:inherit;text-align:center;vertical-align:top}
+            </style>
+            <table class="tg">
+            <thead>
+              <tr>
+                <th class="tg-7uu0">Source</th>
+                <th class="tg-v86e">SS</th>
+                <th class="tg-v86e">dof1</th>
+                <th class="tg-v86e">dof2</th>
+                <th class="tg-v86e">MS</th>
+                <th class="tg-v86e">F</th>
+                <th class="tg-v86e">p-unc</th>
+                <th class="tg-v86e">p-GG-corr</th>
+                <th class="tg-v86e">ηp2</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td class="tg-arf0">Stimulus types</td>
+                <td class="tg-tqma">17.249</td>
+                <td class="tg-tqma">1</td>
+                <td class="tg-tqma">16</td>
+                <td class="tg-tqma">17.249</td>
+                <td class="tg-tqma">27.206</td>
+                <td class="tg-tqma">0.000</td>
+                <td class="tg-tqma">0.000</td>
+                <td class="tg-tqma">0.630</td>
+              </tr>
+              <tr>
+                <td class="tg-arf0">Task types</td>
+                <td class="tg-tqma">0.042</td>
+                <td class="tg-tqma">1</td>
+                <td class="tg-tqma">16</td>
+                <td class="tg-tqma">0.042</td>
+                <td class="tg-tqma">0.053</td>
+                <td class="tg-tqma">0.821</td>
+                <td class="tg-tqma">0.821</td>
+                <td class="tg-tqma">0.003</td>
+              </tr>
+              <tr>
+                <td class="tg-arf0">Stimulus types <br>X<br> Task types</td>
+                <td class="tg-tqma">4.887</td>
+                <td class="tg-tqma">1</td>
+                <td class="tg-tqma">16</td>
+                <td class="tg-tqma">4.887</td>
+                <td class="tg-tqma">14.599</td>
+                <td class="tg-tqma">0.002</td>
+                <td class="tg-tqma">0.002</td>
+                <td class="tg-tqma">0.477</td>
+              </tr>
+            </tbody>
+            </table>
+
+          </p>
+          <h2 class="title is-3" style="text-align: center;"><br>Liking question boxplot</h2>
+          <img src="static/images/iter2/fig_liking.png" alt="Liking question boxplot"/>
+          <h3 class="title is-4" style="text-align: center;">ANOVA table for Liking Questions</h3>
+            <p>
+
+              <style type="text/css">
+              .tg  {border-collapse:collapse;border-spacing:0;margin:0px auto;}
+              .tg td{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
+                overflow:hidden;padding:10px 5px;word-break:normal;}
+              .tg th{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
+                font-weight:normal;overflow:hidden;padding:10px 5px;word-break:normal;}
+              .tg .tg-6cpu{background-color:#efefef;font-family:inherit;text-align:center;vertical-align:middle}
+              .tg .tg-7j3s{background-color:#c0c0c0;font-family:inherit;text-align:left;vertical-align:middle}
+              .tg .tg-c48q{background-color:#c0c0c0;font-family:inherit;text-align:center;vertical-align:middle}
+              .tg .tg-767g{background-color:#efefef;font-family:inherit;text-align:left;vertical-align:middle}
+              </style>
+              <table class="tg">
+              <thead>
+                <tr>
+                  <th class="tg-7j3s">Source</th>
+                  <th class="tg-c48q">SS</th>
+                  <th class="tg-c48q">dof1</th>
+                  <th class="tg-c48q">dof2</th>
+                  <th class="tg-c48q">MS</th>
+                  <th class="tg-c48q">F</th>
+                  <th class="tg-c48q">p-unc</th>
+                  <th class="tg-c48q">p-GG-corr</th>
+                  <th class="tg-c48q">ηp2</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td class="tg-767g">Stimulus types</td>
+                  <td class="tg-6cpu">16.073</td>
+                  <td class="tg-6cpu">1</td>
+                  <td class="tg-6cpu">16</td>
+                  <td class="tg-6cpu">16.073</td>
+                  <td class="tg-6cpu">57.666</td>
+                  <td class="tg-6cpu">0.000</td>
+                  <td class="tg-6cpu">0.000</td>
+                  <td class="tg-6cpu">0.783</td>
+                </tr>
+                <tr>
+                  <td class="tg-767g">Task types</td>
+                  <td class="tg-6cpu">0.195</td>
+                  <td class="tg-6cpu">1</td>
+                  <td class="tg-6cpu">16</td>
+                  <td class="tg-6cpu">0.195</td>
+                  <td class="tg-6cpu">0.298</td>
+                  <td class="tg-6cpu">0.593</td>
+                  <td class="tg-6cpu">0.593</td>
+                  <td class="tg-6cpu">0.018</td>
+                </tr>
+                <tr>
+                  <td class="tg-767g">Stimulus types <br>X<br> Task types</td>
+                  <td class="tg-6cpu">3.627</td>
+                  <td class="tg-6cpu">1</td>
+                  <td class="tg-6cpu">16</td>
+                  <td class="tg-6cpu">3.627</td>
+                  <td class="tg-6cpu">10.262</td>
+                  <td class="tg-6cpu">0.006</td>
+                  <td class="tg-6cpu">0.006</td>
+                  <td class="tg-6cpu">0.391</td>
+                </tr>
+              </tbody>
+              </table>
+
+            </p>
+
+            <h2 class="title is-3" style="text-align: center;"><br>Linear Mixed Model</h2>
+            <img src="static/images/iter2/lmm_plot.png" alt="LMM plot"/>
+            <h3 class="title is-4" style="text-align: center;"><br>LMM table for Wanting Questions</h3>
+
+            <style type="text/css">
+            .tg  {border-collapse:collapse;border-spacing:0;margin:0px auto;}
+            .tg td{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
+              overflow:hidden;padding:10px 5px;word-break:normal;}
+            .tg th{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
+              font-weight:normal;overflow:hidden;padding:10px 5px;word-break:normal;}
+            .tg .tg-sxqf{border-color:inherit;font-family:inherit;text-align:left;vertical-align:top}
+            .tg .tg-0pky{border-color:inherit;text-align:left;vertical-align:top}
+            </style>
+            <table class="tg">
+            <tbody>
+              <tr>
+                <td class="tg-sxqf">Model:</td>
+                <td class="tg-0pky">MixedLM</td>
+                <td class="tg-0pky">Dependent Variable:</td>
+                <td class="tg-0pky">rating</td>
+              </tr>
+              <tr>
+                <td class="tg-sxqf">No. Observations:</td>
+                <td class="tg-sxqf">68</td>
+                <td class="tg-sxqf">Method:</td>
+                <td class="tg-sxqf">REML</td>
+              </tr>
+              <tr>
+                <td class="tg-sxqf">No. Groups:</td>
+                <td class="tg-sxqf">17</td>
+                <td class="tg-sxqf">Scale:</td>
+                <td class="tg-sxqf">0.6761</td>
+              </tr>
+              <tr>
+                <td class="tg-sxqf">Min. group size:</td>
+                <td class="tg-sxqf">4</td>
+                <td class="tg-sxqf">Log-likelihood:</td>
+                <td class="tg-sxqf">-93.3793</td>
+              </tr>
+              <tr>
+                <td class="tg-sxqf">Max. group size:</td>
+                <td class="tg-sxqf">4</td>
+                <td class="tg-sxqf">Converged:</td>
+                <td class="tg-sxqf">Yes</td>
+              </tr>
+              <tr>
+                <td class="tg-sxqf">Mean group size:</td>
+                <td class="tg-sxqf">4.0</td>
+                <td class="tg-sxqf"></td>
+                <td class="tg-sxqf"></td>
+              </tr>
+            </tbody>
+            </table>
+
+            <style type="text/css">
+            .tg  {border-collapse:collapse;border-spacing:0;margin:0px auto;}
+            .tg td{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
+              overflow:hidden;padding:10px 5px;word-break:normal;}
+            .tg th{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
+              font-weight:normal;overflow:hidden;padding:10px 5px;word-break:normal;}
+            .tg .tg-0pky{border-color:inherit;text-align:left;vertical-align:top}
+            .tg .tg-y698{background-color:#efefef;border-color:inherit;text-align:left;vertical-align:top}
+            </style>
+            <table class="tg">
+            <thead>
+              <tr>
+                <th class="tg-0pky"></th>
+                <th class="tg-0pky">Coef.</th>
+                <th class="tg-0pky">Std. Err.</th>
+                <th class="tg-0pky">z</th>
+                <th class="tg-0pky">P&gt;|z|</th>
+                <th class="tg-0pky">[0.025</th>
+                <th class="tg-0pky">0.975]</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td class="tg-y698">Intercept</td>
+                <td class="tg-y698">3.039</td>
+                <td class="tg-y698">0.224</td>
+                <td class="tg-y698">13.558</td>
+                <td class="tg-y698">0.000</td>
+                <td class="tg-y698">2.599</td>
+                <td class="tg-y698">3.478</td>
+              </tr>
+              <tr>
+                <td class="tg-y698">task_types[T.Olf]</td>
+                <td class="tg-y698">0.050</td>
+                <td class="tg-y698">0.199</td>
+                <td class="tg-y698">0.250</td>
+                <td class="tg-y698">0.802</td>
+                <td class="tg-y698">-0.341</td>
+                <td class="tg-y698">0.441</td>
+              </tr>
+              <tr>
+                <td class="tg-y698">stim_types[T.Non-Alc Stim]</td>
+                <td class="tg-y698">-1.007</td>
+                <td class="tg-y698">0.199</td>
+                <td class="tg-y698">-5.051</td>
+                <td class="tg-y698">0.000</td>
+                <td class="tg-y698">-1.398</td>
+                <td class="tg-y698">-0.616</td>
+              </tr>
+              <tr>
+                <td class="tg-y698">Group Var</td>
+                <td class="tg-y698">0.347</td>
+                <td class="tg-y698">0.256</td>
+                <td class="tg-y698"></td>
+                <td class="tg-y698"></td>
+                <td class="tg-y698"></td>
+                <td class="tg-y698"></td>
+              </tr>
+            </tbody>
+            </table>
+
+            <h3 class="title is-4" style="text-align: center;"><br>LMM table for Liking Questions</h3>
+
+            <style type="text/css">
+            .tg  {border-collapse:collapse;border-spacing:0;margin:0px auto;}
+            .tg td{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
+              overflow:hidden;padding:10px 5px;word-break:normal;}
+            .tg th{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
+              font-weight:normal;overflow:hidden;padding:10px 5px;word-break:normal;}
+            .tg .tg-sxqf{border-color:inherit;font-family:inherit;text-align:left;vertical-align:top}
+            .tg .tg-0pky{border-color:inherit;text-align:left;vertical-align:top}
+            </style>
+            <table class="tg">
+            <tbody>
+              <tr>
+                <td class="tg-sxqf">Model:</td>
+                <td class="tg-0pky">MixedLM</td>
+                <td class="tg-0pky">Dependent Variable</td>
+                <td class="tg-0pky">rating</td>
+              </tr>
+              <tr>
+                <td class="tg-sxqf">No. Observations:</td>
+                <td class="tg-sxqf">68</td>
+                <td class="tg-sxqf">Method:</td>
+                <td class="tg-sxqf">REML</td>
+              </tr>
+              <tr>
+                <td class="tg-sxqf">No. Groups:</td>
+                <td class="tg-sxqf">17</td>
+                <td class="tg-sxqf">Scale:</td>
+                <td class="tg-sxqf">0.4940</td>
+              </tr>
+              <tr>
+                <td class="tg-sxqf">Min. group size:</td>
+                <td class="tg-sxqf">4</td>
+                <td class="tg-sxqf">Log-likelihood:</td>
+                <td class="tg-sxqf">-83.4779</td>
+              </tr>
+              <tr>
+                <td class="tg-sxqf">Max. group size:</td>
+                <td class="tg-sxqf">4</td>
+                <td class="tg-sxqf">Converged:</td>
+                <td class="tg-sxqf">Yes</td>
+              </tr>
+              <tr>
+                <td class="tg-sxqf">Mean group size:</td>
+                <td class="tg-sxqf">4.0</td>
+                <td class="tg-sxqf"></td>
+                <td class="tg-sxqf"></td>
+              </tr>
+            </tbody>
+            </table>
+
+            <style type="text/css">
+            .tg  {border-collapse:collapse;border-spacing:0;margin:0px auto;}
+            .tg td{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
+              overflow:hidden;padding:10px 5px;word-break:normal;}
+            .tg th{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
+              font-weight:normal;overflow:hidden;padding:10px 5px;word-break:normal;}
+            .tg .tg-kftd{background-color:#efefef;text-align:left;vertical-align:top}
+            .tg .tg-0lax{text-align:left;vertical-align:top}
+            </style>
+            <table class="tg">
+            <thead>
+              <tr>
+                <th class="tg-0lax"></th>
+                <th class="tg-0lax">Coef.</th>
+                <th class="tg-0lax">Std. Err.</th>
+                <th class="tg-0lax">z</th>
+                <th class="tg-0lax">P&gt;|z|</th>
+                <th class="tg-0lax">[0.025</th>
+                <th class="tg-0lax">0.975]</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td class="tg-kftd">Intercept</td>
+                <td class="tg-kftd">3.775</td>
+                <td class="tg-kftd">0.194</td>
+                <td class="tg-kftd">19.482</td>
+                <td class="tg-kftd">0.000</td>
+                <td class="tg-kftd">3.395</td>
+                <td class="tg-kftd">4.154</td>
+              </tr>
+              <tr>
+                <td class="tg-kftd">task_types[T.Olf]</td>
+                <td class="tg-kftd">-0.107</td>
+                <td class="tg-kftd">0.170</td>
+                <td class="tg-kftd">-0.628</td>
+                <td class="tg-kftd">0.530</td>
+                <td class="tg-kftd">-0.441</td>
+                <td class="tg-kftd">0.227</td>
+              </tr>
+              <tr>
+                <td class="tg-kftd">stim_types[T.Non-Alc Stim]</td>
+                <td class="tg-kftd">-0.972</td>
+                <td class="tg-kftd">0.170</td>
+                <td class="tg-kftd">-5.704</td>
+                <td class="tg-kftd">0.000</td>
+                <td class="tg-kftd">-1.306</td>
+                <td class="tg-kftd">-0.638</td>
+              </tr>
+              <tr>
+                <td class="tg-kftd">Group Var</td>
+                <td class="tg-kftd">0.268</td>
+                <td class="tg-kftd">0.227</td>
+                <td class="tg-kftd"></td>
+                <td class="tg-kftd"></td>
+                <td class="tg-kftd"></td>
+                <td class="tg-kftd"></td>
+              </tr>
+            </tbody>
+            </table>
+
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
 
 <!-- Paper poster -->
 <section class="hero is-small is-light">
